fixed bags in css and html

--- a/index.html
+++ b/index.html
@@ -66,17 +66,18 @@
                 <ul class="social__list">
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <img class="social__icon" src="assets/images/instagram.png" alt="instagram">
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link" href="#">
                             <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
                         </a>
                     </li>
                     <li class="social__item">
                         <a class="social__link" href="#">
                             <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
+                        </a>
+                    </li>
+                    <li class="social__item">
+
+                        <a class="social__link" href="#">
+                            <img class="social__icon" src="assets/images/instagram.png" alt="instagram">
                         </a>
                     </li>
                 </ul>
@@ -162,7 +163,7 @@
                     drink?</span>
             </h2>
             <ul class="about__list">
-                <li class="about__item">Crunchy Puffs<span class="about__item--bold">Texture</span></li>
+                <li class="about__item"><span class="about__item--bold">Crunchy Puffs</span>Texture</li>
                 <li class="about__item"><span class="about__item--bold">100 Calories</span> per drink</li>
                 <li class="about__item"> 4g Plant Protein</li>
                 <li class="about__item">Good source of <span class="about__item--bold">Magnesium & Vitamin B6</span>
@@ -172,7 +173,10 @@
                 <li class="about__item"><span class="about__item--bold">Gluten-Free & Grain-Free</span></li>
                 <li class="about__item"><span class="about__item--bold">Corn-Free & Soy-Free</span></li>
             </ul>
-            <a class="about__link" href="#">About Organic Smoothie</a>
+            <button class="about__btn btn btn--border-white">
+                <a class="about__link" href="#">About Organic Smoothie</a>
+            </button>
+
         </div>
         <!-- about__wrapper -->
     </section>
