--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <footer class="footer__top">
         <div class="footer__wrapper">
             <a class="logo footer__logo" href="#">
-                <img class="logo__img" src="assets/images/logo.jpg" alt="logo">
+                <img class="logo__img" src="assets/images/logo.png" alt="logo">
             </a>
             <div class="footer__info info">
                 <h4 class="footer__title">Information</h4>
