add css in block about

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <li class="about__item"><span class="about__item--bold">Gluten-Free & Grain-Free</span></li>
                 <li class="about__item"><span class="about__item--bold">Corn-Free & Soy-Free</span></li>
             </ul>
-            <button class="about__btn btn btn--border-white">
+            <button class="about__btn btn btn--border-orange">
                 <a class="about__link" href="#">About Organic Smoothie</a>
             </button>
 
