fixed bags in css

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <section class="products">
 
-        <div class="products__item product">
+        <div class="product__item product">
             <h3 class="product__label">Dark Chocolate Smoothie</h3>
             <span class="product__subtitle">100 ml</span>
             <button class="product__button btn">Buy</button>
