--- a/index.html
+++ b/index.html
@@ -12,85 +12,88 @@
 
 <body>
     <header class="header">
-        <div class="header__top">
-            <nav class="header__menu menu">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Home</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Shop</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Story</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">About</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Blog</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Testimonials</a>
-                    </li>
-                </ul>
-                <!-- menu__list -->
-            </nav>
-            <!-- header-menu menu -->
-            <a class="logo header__logo" href="#">
-                <img class="logo__img" src="assets/images/logo.png" alt="logo">
-            </a>
+        <div class="container">
+            <div class="header__top">
+                <nav class="header__menu menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Home</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Shop</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Story</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">About</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Blog</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Testimonials</a>
+                        </li>
+                    </ul>
+                    <!-- menu__list -->
+                </nav>
+                <!-- header-menu menu -->
+                <a class="logo header__logo" href="#">
+                    <img class="logo__img" src="assets/images/logo.png" alt="logo">
+                </a>
 
-            <div class="header__personal personal">
-                <ul class="personal__list">
-                    <li class="personal__item">
-                        <a class="personal__link" href="#">
-                            <img class="personal__icon" src="assets/images/search.png" alt="search">
-                        </a>
-                    </li>
-                    <li class="personal__item">
-                        <a class="personal__link" href="#">
-                            <img class="personal__icon" src="assets/images/user.png" alt="useregor">
-                        </a>
-                    </li>
-                    <li class="personal__item">
-                        <a class="personal__link--cart" href="#">
-                            <img class="personal__icon" src="assets/images/cart.png" alt="cart">
-                        </a>
-                        <span class="personal__count">0</span>
-                    </li>
-                </ul>
+                <div class="header__personal personal">
+                    <ul class="personal__list">
+                        <li class="personal__item">
+                            <a class="personal__link" href="#">
+                                <img class="personal__icon" src="assets/images/search.png" alt="search">
+                            </a>
+                        </li>
+                        <li class="personal__item">
+                            <a class="personal__link" href="#">
+                                <img class="personal__icon" src="assets/images/user.png" alt="useregor">
+                            </a>
+                        </li>
+                        <li class="personal__item">
+                            <a class="personal__link--cart" href="#">
+                                <img class="personal__icon" src="assets/images/cart.png" alt="cart">
+                            </a>
+                            <span class="personal__count">0</span>
+                        </li>
+                    </ul>
+                </div>
+                <!-- header__personal personal -->
+                <div class="header__social social">
+                    <ul class="social__list">
+                        <li class="social__item">
+                            <a class="social__link" href="#">
+                                <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a class="social__link" href="#">
+                                <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
+                            </a>
+                        </li>
+                        <li class="social__item">
+
+                            <a class="social__link" href="#">
+                                <img class="social__icon" src="assets/images/instagram.png" alt="instagram">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- header__social social -->
+
+            </div> <!-- header-top -->
+
+            <div class="header__content">
+                <button class="header__btn btn btn--bg">Shop now</button>
+                <h1 class="header__title title">SMOOTHIE</h1>
             </div>
-            <!-- header__personal personal -->
-            <div class="header__social social">
-                <ul class="social__list">
-                    <li class="social__item">
-                        <a class="social__link" href="#">
-                            <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link" href="#">
-                            <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
-                        </a>
-                    </li>
-                    <li class="social__item">
-
-                        <a class="social__link" href="#">
-                            <img class="social__icon" src="assets/images/instagram.png" alt="instagram">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <!-- header__social social -->
-
-        </div> <!-- header-top -->
-
-        <div class="header__content">
-            <button class="header__btn btn btn--bg">Shop now</button>
-            <h1 class="header__title title">SMOOTHIE</h1>
+            <!-- header__content -->
         </div>
-        <!-- header__content -->
+        <!-- container -->
     </header>
     <!-- header -->
 
