--- a/index.html
+++ b/index.html
@@ -98,18 +98,21 @@
     <!-- header -->
 
     <section class="smoothies">
-        <div class="container">
-            <h2 class="smoothies__title title">What are these smoothies?</h2>
-            <p class="smoothies__text">A smoothie is a drink made from pureed raw fruit, vegetables, and
-                sometimes
-                dairy products (milk, yogurt,
-                ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other
-                ingredients,
-                such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey
-                powder,
-                plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
-            </p>
-            <!-- text -->
+        <div class="smoothies__container">
+            <div class="smoothies__wrapper">
+                <h2 class="smoothies__title title">What are these smoothies?</h2>
+                <p class="smoothies__text">A smoothie is a drink made from pureed raw fruit, vegetables, and
+                    sometimes
+                    dairy products (milk, yogurt,
+                    ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other
+                    ingredients,
+                    such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey
+                    powder,
+                    plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
+                </p>
+                <!-- text -->
+            </div>
+            <!-- smoothies__wrapper -->
 
             <div class="smoothies__cards cards">
                 <div class="cards__item">
@@ -155,7 +158,7 @@
             </div>
             <!-- cards -->
         </div>
-        <!-- container -->
+        <!-- smoothies__container -->
     </section>
     <!--smoothies -->
 
