--- a/index.html
+++ b/index.html
@@ -42,49 +42,47 @@
                     <img class="logo__img" src="assets/images/logo.png" alt="logo">
                 </a>
                 <div class="header-block">
-                    <div class="header__personal personal">
-                        <ul class="personal__list">
-                            <li class="personal__item">
-                                <a class="personal__link" href="#">
-                                    <img class="personal__icon" src="assets/images/search.png" alt="search">
-                                </a>
-                            </li>
-                            <li class="personal__item">
-                                <a class="personal__link" href="#">
-                                    <img class="personal__icon" src="assets/images/user.png" alt="useregor">
-                                </a>
-                            </li>
-                            <li class="personal__item">
-                                <a class="personal__link--cart" href="#"><span class="personal__count">0</span>
-                                    <img class="personal__icon" src="assets/images/cart.png" alt="cart">
-                                </a>
 
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- header__personal personal -->
-                    <div class="header__social social">
-                        <ul class="social__list">
-                            <li class="social__item">
-                                <a class="social__link" href="#">
-                                    <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
-                                </a>
-                            </li>
-                            <li class="social__item">
-                                <a class="social__link" href="#">
-                                    <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
-                                </a>
-                            </li>
-                            <li class="social__item">
+                    <ul class="personal__list">
+                        <li class="personal__item">
+                            <a class="personal__link" href="#">
+                                <img class="personal__icon" src="assets/images/search.png" alt="search">
+                            </a>
+                        </li>
+                        <li class="personal__item">
+                            <a class="personal__link" href="#">
+                                <img class="personal__icon" src="assets/images/user.png" alt="useregor">
+                            </a>
+                        </li>
+                        <li class="personal__item">
+                            <a class="personal__link--cart" href="#"><span class="personal__count">0</span>
+                                <img class="personal__icon" src="assets/images/cart.png" alt="cart">
+                            </a>
+                        </li>
+                    </ul>
 
-                                <a class="social__link" href="#">
-                                    <img class="social__icon" src="assets/images/instagram.png" alt="instagram">
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- header__social social -->
+
+                    <ul class="social__list">
+                        <li class="social__item">
+                            <a class="social__link" href="#">
+                                <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a class="social__link" href="#">
+                                <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
+                            </a>
+                        </li>
+                        <li class="social__item">
+
+                            <a class="social__link" href="#">
+                                <img class="social__icon" src="assets/images/instagram.png" alt="instagram">
+                            </a>
+                        </li>
+                    </ul>
+
                 </div>
+                <!-- header-block -->
 
 
             </div> <!-- header-top -->
