added block in file css about__wrapper

--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
     <!--smoothies -->
 
     <section class="about">
-        <img class="about__img" src="assets/images/summer.png" alt="summer">
+        <div class="about__image">
+            <img class="about__img" src="assets/images/summer.png" alt="summer">
+        </div>
         <div class="about__wrapper">
             <h2 class="about__title title">What makes Smoothie an <span class="about__title--green">awesome
                     drink?</span>
