added block story in css and fixed bags in html

--- a/index.html
+++ b/index.html
@@ -219,29 +219,25 @@
     <!-- products -->
 
     <section class="story">
-        <div class="container">
-            <div class="story__inner">
-                <div class="story__box">
-                    <h2 class="story__title title">Our story</h2>
-                    <p class="story__text">As products typically using raw fruits or vegetables, smoothies include
-                        dietary fiber (e.g. pulp,
-                        skin,
-                        and
-                        seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.
-                    </p>
-                    <a class="story__link" href="#">Who we are</a>
-                </div>
-                <!-- story__box -->
-                <div class="story__content">
-                    <img class="story__image" src="assets/images/img.jpg" alt="our story">
-                </div>
-                <!-- story__content -->
+        <div class="story__inner">
+            <div class="story__box">
+                <h2 class="story__title title">Our story</h2>
+                <p class="story__text">As products typically using raw fruits or vegetables, smoothies include
+                    dietary fiber (e.g. pulp,
+                    skin,
+                    and
+                    seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
+                <button class="story__btn btn">Who we are</button>
             </div>
-            <!-- container -->
-            <!-- wrapper -->
+            <!-- story__box -->
         </div>
+        <!-- story__inner -->
+        <div class="story__content">
+            <img class="story__image" src="assets/images/img.jpg" alt="our story">
+        </div>
+        <!-- story__content -->
     </section>
-    <!-- our story -->
+    <!-- story -->
 
     <section class="testimonials">
         <div class="container">
