added block textiomonials in css and html

--- a/index.html
+++ b/index.html
@@ -240,21 +240,21 @@
     <!-- story -->
 
     <section class="testimonials">
-        <div class="container">
-            <div class="testimonials__inner">
-                <h2 class="testimonials__title title">Why clients <span class="testimonials__title--big">LOVE</span> us?
-                </h2>
+        <div class="testimonials__inner">
+            <h2 class="testimonials__title title">Why clients <span class="testimonials__title--big">LOVE</span> us?
+            </h2>
+            <div class="testimonials__wrapper">
                 <div class="testimonials__box">
                     <q class="testimonials__quote">moothie is great. I don't know what else to say. I will let my mum
                         know about this, she could really make use of Smoothie! Smoothie saved my business.</q>
                     <cite class="testimonials__cite">- from Santa Monica, CA</cite>
-                    <img class="testimonials__img" src="assets/images/reviews.jpg" alt="reviews">
                 </div>
                 <!-- testimonials__box -->
+                <img class="testimonials__img" src="assets/images/reviews.png" alt="reviews">
             </div>
-            <!-- testimonials__inner -->
+            <!-- testimonials__wrapper -->
         </div>
-        <!-- container -->
+        <!-- testimonials__inner -->
     </section>
     <!-- testimonials -->
 
