added footer css

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <li class="social__item">
 
                             <a class="social__link" href="#">
-                                <img class="social__icon" src="assets/images/instagram.png" alt="instagram">
+                                <img class="social__icon" src="assets/images/instagram_icon.png" alt="instagram">
                             </a>
                         </li>
                     </ul>
@@ -99,20 +99,19 @@
 
     <section class="smoothies">
         <div class="smoothies__container">
-            <div class="smoothies__wrapper">
-                <h2 class="smoothies__title title">What are these smoothies?</h2>
-                <p class="smoothies__text">A smoothie is a drink made from pureed raw fruit, vegetables, and
-                    sometimes
-                    dairy products (milk, yogurt,
-                    ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other
-                    ingredients,
-                    such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey
-                    powder,
-                    plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
-                </p>
-                <!-- text -->
-            </div>
-            <!-- smoothies__wrapper -->
+
+            <h2 class="smoothies__title title">What are these smoothies?</h2>
+            <p class="smoothies__text">A smoothie is a drink made from pureed raw fruit, vegetables, and
+                sometimes
+                dairy products (milk, yogurt,
+                ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other
+                ingredients,
+                such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey
+                powder,
+                plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
+            </p>
+            <!-- text -->
+
 
             <div class="smoothies__cards cards">
                 <div class="cards__item">
@@ -299,58 +298,64 @@
     </section>
     <!-- Instagram -->
 
-    <footer class="footer__top">
-        <div class="footer__wrapper">
-            <a class="logo footer__logo" href="#">
-                <img class="logo__img" src="assets/images/logo.png" alt="logo">
-            </a>
-            <div class="footer__info info">
-                <h4 class="footer__title">Information</h4>
-                <ul class="info__list">
-                    <li class="info__item"><a class="info__link" href="#">Search</a></li>
-                    <li class="info__item"><a class="info__link" href="#">Contact us</a></li>
-                    <li class="info__item"><a class="info__link" href="#">Terms & Conditions</a></li>
-                    <li class="info__item"><a class="info__link" href="#">Privacy Policy</a></li>
-                </ul>
+    <footer class="footer">
+        <div class="footer__top">
+            <div class="footer__wrapper">
+                <a class="logo footer__logo" href="#">
+                    <img class="logo__img" src="assets/images/logo.png" alt="logo">
+                </a>
+                <div class="footer__info info">
+                    <h4 class="footer__title">Information</h4>
+                    <ul class="info__list">
+                        <li class="info__item"><a class="info__link" href="#">Search</a></li>
+                        <li class="info__item"><a class="info__link" href="#">Contact us</a></li>
+                        <li class="info__item"><a class="info__link" href="#">Terms & Conditions</a></li>
+                        <li class="info__item"><a class="info__link" href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <!-- footer__info info -->
+
+                <!-- footer__wrapper -->
+                <div class="footer__payment payment">
+                    <h4 class="footer__title">Payment</h4>
+                    <div class="payment__box">
+                        <img class="payment__img" src="assets/images/amex.png" alt="amex">
+                        <img class="payment__img" src="assets/images/apple.png" alt="apple">
+                        <img class="payment__img" src="assets/images/maestro.png" alt="maestro">
+                        <img class="payment__img" src="assets/images/discover.png" alt="discover">
+                        <img class="payment__img" src="assets/images/jcb.png" alt="jcb">
+                        <img class="payment__img" src="assets/images/paypal.png" alt="paypal">
+                        <img class="payment__img" src="assets/images/mastercard.png" alt="mastercard">
+                        <img class="payment__img" src="assets/images/shopify_pay.png" alt="shopify pay">
+                        <img class="payment__img" src="assets/images/visa.png" alt="visa">
+                    </div>
+                    <!-- payment__box -->
+                </div>
+                <!-- footer__payment payment -->
+                <div class="footer__box">
+                    <h4 class="footer__title">Don’t miss out!</h4>
+                    <form class="footer__form">
+                        <input class="footer__input" type="email" value="" placeholder="Subscribe to our newsletter"
+                            required>
+                        <button class="footer__btn">Follow Us</button>
+                    </form>
+                </div>
+                <!-- footer__box -->
+                <div class="footer__social">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a class="footer__link" href="#"><img class="footer__img"
+                                    src="assets/images/facebook.png" alt="facebook"></a></li>
+                        <li class="footer__item"><a class="footer__link" href="#"><img class="footer__img"
+                                    src="assets/images/pinterest.png" alt="pinterest"></a></li>
+                        <li class="footer__item"><a class="footer__link" href="#"><img class="footer__img"
+                                    src="assets/images/instagram.png" alt="instagram"></a></li>
+                    </ul>
+                </div>
+                <!-- footer__social -->
             </div>
-            <!-- footer__info info -->
+            <!-- footer__wrapper -->
         </div>
-        <!-- footer__wrapper -->
-        <div class="footer__payment payment">
-            <h4 class="payment__title">Payment</h4>
-            <div class="payment__box">
-                <img class="payment__img" src="assets/images/amex.png" alt="amex">
-                <img class="payment__img" src="assets/images/apple.png" alt="apple">
-                <img class="payment__img" src="assets/images/maestro.png" alt="maestro">
-                <img class="payment__img" src="assets/images/discover.png" alt="discover">
-                <img class="payment__img" src="assets/images/jcb.png" alt="jcb">
-                <img class="payment__img" src="assets/images/paypal.png" alt="paypal">
-                <img class="payment__img" src="assets/images/mastercard.png" alt="mastercard">
-                <img class="payment__img" src="assets/images/shopify_pay.png" alt="shopify pay">
-                <img class="payment__img" src="assets/images/visa.png" alt="visa">
-            </div>
-            <!-- payment__box -->
-        </div>
-        <!-- footer__payment payment -->
-        <div class="footer__box">
-            <h4 class="footer__title">Don’t miss out!</h4>
-            <form class="footer__form">
-                <input class="footer__input" type="email" value="" placeholder="Subscribe to our newsletter" required>
-                <button class="footer__btn">Follow Us</button>
-            </form>
-        </div>
-        <!-- footer__box -->
-        <div class="footer__social">
-            <ul class="footer__list">
-                <li class="footer__item"><a class="footer__link" href="#"><img class="footer__img"
-                            src="assets/images/facebook.png" alt="facebook"></a></li>
-                <li class="footer__item"><a class="footer__link" href="#"><img class="footer__img"
-                            src="assets/images/pinterest.png" alt="pinterest"></a></li>
-                <li class="footer__item"><a class="footer__link" href="#"><img class="footer__img"
-                            src="assets/images/instagram.png" alt="instagram"></a></li>
-            </ul>
-        </div>
-        <!-- footer__social -->
+        <!-- footer__top -->
         <div class="footer__bottom bottom">
             <small class="bottom__small">© 2020. All Rights Reserved.</small>
             <a class="bottom__link" href="#">Go top</a>
