fixed bags in html and css 03.05.21

--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
                 <img class="testimonials__img" src="assets/images/reviews.png" alt="reviews">
             </div>
             <!-- testimonials__wrapper -->
+            <div class="testimonials__container">
+                <button class="testimonials__button-left"></button>
+                <button class="testimonials__button-right"></button>
+            </div>
+            <!-- testimonials__container -->
         </div>
         <!-- testimonials__inner -->
     </section>
