fixed bags in css and html classes

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
                 </a>
 
                 <div class="header-block">
-                    <ul class="header__personal personal">
-                        <li class="personal__item">
-                            <a class="personal__link" href="#">
-                                <img class="personal__icon" src="assets/images/search.png" alt="search">
+                    <ul class="header__personal">
+                        <li class="header__item">
+                            <a class="header__link" href="#">
+                                <img class="header__icon" src="assets/images/search.png" alt="search">
                             </a>
                         </li>
-                        <li class="personal__item">
-                            <a class="personal__link" href="#">
-                                <img class="personal__icon" src="assets/images/user.png" alt="useregor">
+                        <li class="header__item">
+                            <a class="header__link" href="#">
+                                <img class="header__icon" src="assets/images/user.png" alt="useregor">
                             </a>
                         </li>
-                        <li class="personal__item">
-                            <a class="personal__link--cart" href="#"><span class="personal__count">0</span>
-                                <img class="personal__icon" src="assets/images/cart.png" alt="cart">
+                        <li class="header__item">
+                            <a class="header__link--cart" href="#"><span class="header__count">0</span>
+                                <img class="header__icon" src="assets/images/cart.png" alt="cart">
                             </a>
                         </li>
                     </ul>
@@ -97,8 +97,9 @@
     <section class="smoothies">
 
         <div class="smoothies__container">
-            <h2 class="smoothies__title title">What are these smoothies?</h2>
-            <p class="smoothies__text text">A smoothie is a drink made from pureed raw fruit, vegetables, and
+            <h2 class="smoothies__title title title--orange">What are these smoothies?</h2>
+            <p class="smoothies__text text text--black">A smoothie is a drink made from pureed raw fruit, vegetables,
+                and
                 sometimes
                 dairy products (milk, yogurt,
                 ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other
