added block product in css

--- a/index.html
+++ b/index.html
@@ -185,25 +185,25 @@
 
     <section class="products">
         <div class="products__wrapper">
-            <div class="product__item product">
+            <div class="product__item">
                 <img class="product__img" src="assets/images/Dark_Chocolate.png" alt="Dark chocolate">
                 <h3 class="product__label">Dark Chocolate Smoothie</h3>
                 <span class="product__subtitle">100 ml</span>
                 <button class="product__button btn">Buy</button>
             </div>
-            <div class="product__item product">
+            <div class="product__item">
                 <img class="product__img" src="assets/images/Vegan_Lettuce.png" alt="vegan Lettuce">
                 <h3 class="product__label">Vegan Lettuce Smoothie</h3>
                 <span class="product__subtitle">100 ml</span>
                 <button class="product__button btn">Buy</button>
             </div>
-            <div class="product__item product">
+            <div class="product__item">
                 <img class="product__img" src="assets/images/Lemon_Ginger.png" alt="Lemon Ginger">
                 <h3 class="product__label">Lemon Ginger Smoothie</h3>
                 <span class="product__subtitle">100 ml</span>
                 <button class="product__button btn">Buy</button>
             </div>
-            <div class="product__item product">
+            <div class="product__item">
                 <img class="product__img" src="assets/images/Turmeric_Garlic.png" alt="Turmeric Garlic">
                 <h3 class="product__label">Turmeric Garlic Smoothie</h3>
                 <span class="product__subtitle">100 ml</span>
