fixed start smoothies

--- a/index.html
+++ b/index.html
@@ -366,9 +366,12 @@
         <!-- footer__top -->
         <div class="footer__bottom ">
             <small class="footer__small">© 2020. All Rights Reserved.</small>
-            <a class="footer__link" href="#"></a>
+            <div class="footer__up up">
+                <button class="up__button button"></button>
+            </div>
+
         </div>
-        <!-- footer__bottom bottom -->
+        <!-- footer__bottom -->
     </footer>
 </body>
 
