--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <div class="header__container">
+        <div class="container">
             <div class="header__top">
                 <nav class="header__menu menu">
                     <ul class="menu__list">
@@ -38,59 +38,65 @@
                     <!-- menu__list -->
                 </nav>
                 <!-- header-menu menu -->
-                <a class="header__logo logo" href="#">
-                    <img class="logo__img" src="assets/images/logo.png" alt="logo">
-                </a>
-
+                <div class="header__logo logo">
+                    <a class="logo__link" href="#">
+                        <img class="logo__img" src="assets/images/logo.png" alt="logo">
+                    </a>
+                </div>
+                <!-- header__logo -->
                 <div class="header-block">
-                    <ul class="header__personal">
-                        <li class="header__item">
-                            <a class="header__link" href="#">
-                                <img class="header__icon" src="assets/images/search.png" alt="search">
-                            </a>
-                        </li>
-                        <li class="header__item">
-                            <a class="header__link" href="#">
-                                <img class="header__icon" src="assets/images/user.png" alt="useregor">
-                            </a>
-                        </li>
-                        <li class="header__item">
-                            <a class="header__link--cart" href="#"><span class="header__count">0</span>
-                                <img class="header__icon" src="assets/images/cart.png" alt="cart">
-                            </a>
-                        </li>
-                    </ul>
-
-                    <ul class="header__social social">
-                        <li class="social__item">
-                            <a class="social__link" href="#">
-                                <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
-                            </a>
-                        </li>
-                        <li class="social__item">
-                            <a class="social__link" href="#">
-                                <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
-                            </a>
-                        </li>
-                        <li class="social__item">
-                            <a class="social__link" href="#">
-                                <img class="social__icon" src="assets/images/instagram_icon.png" alt="instagram">
-                            </a>
-                        </li>
-                    </ul>
-
+                    <div class="header__personal personal">
+                        <ul class="personal__list">
+                            <li class="personal__item">
+                                <a class="personal__link" href="#">
+                                    <img class="personal__icon" src="assets/images/search.png" alt="search">
+                                </a>
+                            </li>
+                            <li class="personal__item">
+                                <a class="personal__link" href="#">
+                                    <img class="personal__icon" src="assets/images/user.png" alt="useregor">
+                                </a>
+                            </li>
+                            <li class="personal__item">
+                                <a class="personal__link--cart" href="#"><span class="personal__count">0</span>
+                                    <img class="personal__icon" src="assets/images/cart.png" alt="cart">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- header__personal -->
+                    <div class="header__social social">
+                        <ul class="social__list">
+                            <li class="social__item">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="assets/images/instagram_icon.png" alt="instagram">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- header__social -->
                 </div>
                 <!-- header-block -->
 
             </div> <!-- header-top -->
-
-            <div class="header__content">
-                <button class="header__btn btn btn--bg">Shop now</button>
-                <h1 class="header__title title">SMOOTHIE</h1>
-            </div>
-            <!-- header__content -->
         </div>
         <!-- container -->
+        <div class="header__content">
+            <button class="header__btn btn btn--green">Shop now</button>
+            <h1 class="header__title title">SMOOTHIE</h1>
+        </div>
+        <!-- header__content -->
+
     </header>
     <!-- header -->
 
