--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <img class="about__img" src="assets/images/summer.png" alt="summer">
         <div class="about__wrapper">
             <h2 class="about__title title about__title--white">What makes Smoothie an <span
-                    class="about__title--green">awesome
+                    class="about__title--orange">awesome
                     drink?</span>
             </h2>
             <ul class="about__list">
