new header block in css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- Сюда подключаем стили -->
     <title>SMOOTHIE</title>
 </head>
@@ -89,14 +89,14 @@
                 <!-- header-block -->
 
             </div> <!-- header-top -->
+
+            <div class="header__content">
+                <button class="header__btn btn btn--green">Shop now</button>
+                <h1 class="header__title title">SMOOTHIE</h1>
+            </div>
+            <!-- header__content -->
         </div>
         <!-- container -->
-        <div class="header__content">
-            <button class="header__btn btn btn--green">Shop now</button>
-            <h1 class="header__title title">SMOOTHIE</h1>
-        </div>
-        <!-- header__content -->
-
     </header>
     <!-- header -->
 
