corrected classes in block story corrected css in block story

--- a/index.html
+++ b/index.html
@@ -221,12 +221,13 @@
         <div class="story__inner">
             <div class="story__box">
                 <h2 class="story__title title">Our story</h2>
-                <p class="story__text text">As products typically using raw fruits or vegetables, smoothies include
+                <p class="story__text text text--black">As products typically using raw fruits or vegetables, smoothies
+                    include
                     dietary fiber (e.g. pulp,
                     skin,
                     and
                     seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
-                <button class="story__btn btn btn--bg">Who we are</button>
+                <button class="story__btn btn btn--green">Who we are</button>
             </div>
             <!-- story__box -->
             <div class="story__content">
