block testimonials css fixed bags block testimonials html

--- a/index.html
+++ b/index.html
@@ -242,17 +242,19 @@
     <section class="testimonials">
 
         <div class="testimonials__inner">
-            <h2 class="testimonials__title title">Why clients <span class="testimonials__title--big">LOVE</span> us?
+            <h2 class="testimonials__title title title--orange">Why clients <span
+                    class="testimonials__title--big">LOVE</span> us?
             </h2>
-
             <div class="testimonials__box">
-                <q class="testimonials__quote">moothie is great. I don't know what else to say. I will let my mum
-                    know about this, she could really make use of Smoothie! Smoothie saved my business.</q>
-                <cite class="testimonials__cite">- from Santa Monica, CA</cite>
+                <div class="testimonials__textbox">
+                    <q class="testimonials__quote">Smoothie is great. I don't know what else to say. I will let my mum
+                        know about this, she could really make use of Smoothie! Smoothie saved my business.</q>
+                    <cite class="testimonials__cite">- from Santa Monica, CA</cite>
+                </div>
+                <!-- testimonials__textbox -->
+                <img class="testimonials__img" src="assets/images/reviews.png" alt="reviews">
             </div>
             <!-- testimonials__box -->
-            <img class="testimonials__img" src="assets/images/reviews.png" alt="reviews">
-
             <div class="testimonials__container">
                 <button class="testimonials__button-left"></button>
                 <button class="testimonials__button-right"></button>
@@ -267,7 +269,7 @@
     <section class="blog">
         <div class="blog__wrapper">
             <div class="blog__box">
-                <h2 class="blog__title title">Our blog</h2>
+                <h2 class="blog__title title title--orange">Our blog</h2>
                 <img class="blog__img" src="assets/images/blog.jpg" alt="blog">
             </div>
             <!-- blog__box -->
