added block instagramm css and shadow

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <!-- Blog -->
 
     <section class="instagram">
-        <h2 class="instagram__title title"><a class="instagram__link" href="#">ashasuperfoods</a></h2>
+        <h2 class="instagram__title title title--green"><a class="instagram__link" href="#">ashasuperfoods</a></h2>
         <div class="instagram__inner">
             <div class="instagram__picture"><img class="instagram__img" src="assets/images/instagramm_1.jpg"
                     alt="instagramm"></div>
