added block footer corrected code with validator

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <section class="story">
         <div class="story__inner">
             <div class="story__box">
-                <h2 class="story__title title">Our story</h2>
+                <h2 class="story__title title title--orange">Our story</h2>
                 <p class="story__text text text--black">As products typically using raw fruits or vegetables, smoothies
                     include
                     dietary fiber (e.g. pulp,
@@ -347,36 +347,43 @@
                     <form class="footer__form">
                         <input class="footer__input" type="email" value="" placeholder="Subscribe to our newsletter"
                             required>
-                        <button class="footer__btn">Follow Us</button>
+
                     </form>
+
+                    <div class="footer__inner">
+                        <span class="footer__text text">Follow Us</span>
+                        <ul class="footer__social social">
+                            <li class="social__item social__item--footer">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="assets/images/facebook_footer.png" alt="facebook">
+                                </a>
+                            </li>
+                            <li class="social__item social__item--footer">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="assets/images/pinterest_footer.png" alt="pinterest">
+                                </a>
+                            </li>
+                            <li class="social__item social__item--footer">
+                                <a class="social__link" href="#">
+                                    <img class="social__icon" src="assets/images/instagram_footer.png" alt="instagram">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- footer__inner -->
                 </div>
                 <!-- footer__box -->
-                <ul class="footer__social social">
-                    <li class="social__item">
-                        <a class="social__link" href="#">
-                            <img class="social__icon" src="assets/images/facebook.png" alt="facebook">
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link" href="#">
-                            <img class="social__icon" src="assets/images/pinterest.png" alt="pinterest">
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link" href="#">
-                            <img class="social__icon" src="assets/images/instagram_icon.png" alt="instagram">
-                        </a>
-                    </li>
-                </ul>
             </div>
             <!-- footer__wrapper -->
         </div>
         <!-- footer__top -->
         <div class="footer__bottom ">
             <small class="footer__small">© 2020. All Rights Reserved.</small>
-            <div class="footer__up up">
-                <button class="up__button button"></button>
-            </div>
+
+            <a href="#" class="footer__link">
+                <!-- <button class="up__button button"></button> -->
+            </a>
+
 
         </div>
         <!-- footer__bottom -->
