добавил относительные единицы измерения в header

--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
     <section class="about">
         <img class="about__img" src="assets/images/summer.png" alt="summer">
         <div class="about__wrapper">
-            <h2 class="about__title title about__title--white">What makes Smoothie an <span
-                    class="about__title--orange">awesome
+            <h2 class="about__title title">What makes Smoothie an <span class="about__title--orange">awesome
                     drink?</span>
             </h2>
             <ul class="about__list">
